language/move-lang/tests/move_check/parser/function_visibility_empty.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_visibility_empty.move:2:5
  │
2 │     public() fun f() {}
  │     ^^^^^^^^ Invalid visibility modifier. Consider removing it or using one of 'public', 'public(script)', or 'public(friend)'

