language/move-lang/tests/move_check/parser/function_visibility_empty.move
module M {
    public() fun f() {}
}
